--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -7,11 +7,18 @@
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
-    <button mat-fab color="accent" (click)="addNewTask()"><mat-icon>add</mat-icon></button>
+    <button mat-fab color="accent" (click)="addNewTask()">
+      <mat-icon>add</mat-icon>
+    </button>
     <mat-selection-list #taskList>
-      <mat-list-option *ngFor="let task of tasks">
-        {{task}}
-      </mat-list-option>
+      <div *ngFor="let task of tasks" class="list-row">
+        <mat-list-option (click)="toggleCheckTask(task.id)" [selected]="task.done">
+          {{task.name}}
+        </mat-list-option>
+        <button class="delete-btn" (click)="deleteTask(task.id)" mat-raised-button color="warn">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
+      </div>
     </mat-selection-list>
     <p>
       Tasks done: {{taskList.selectedOptions.selected.length}} of {{taskList.options.length}}
