--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -11,6 +11,10 @@ button:focus {
   border-bottom: 1px solid #ebebeb;
 }
 
+/*.list-row:nth-child(even) {*/
+  /*background: #ebebeb;*/
+/*}*/
+
 .example-form-field {
   min-width: 250px;
 }
@@ -19,4 +23,8 @@ button:focus {
   margin: 5px;
   min-width: 40px;
   padding: 0;
+}
+
+.checked-task {
+  text-decoration: line-through;
 }
